# operating_systems

./: .clang-format  .gitignore  CMakeLists.txt
lab1/: CMakeLists.txt
lab1/EncodeChar/: CMakeLists.txt  main.cpp
lab2/: CMakeLists.txt
lab2/FlipCase/: CMakeLists.txt  main.cpp
lab2/ListProcessesLinux/: CMakeLists.txt  main.cpp
lab2/Zombie/: CMakeLists.txt  main.cpp
lab3/: CMakeLists.txt
lab3/KillChild/: CMakeLists.txt  Child.cpp  Child.h  ChildKiller.cpp  ChildKiller.h  CommandHandler.cpp  CommandHandler.h  main.cpp
lab3/Pipes/: CMakeLists.txt  main.cpp
lab3/SignalHandler/: CMakeLists.txt  main.cpp
lab4/: CMakeLists.txt
lab4/FlipCaseThreads/: CMakeLists.txt  main.cpp
lab4/Sorter/: CMakeLists.txt  main.cpp
lab4/TicTac/: CMakeLists.txt  main.cpp
lab5/: CMakeLists.txt
lab5/BgThreadDispatcher/: BgThreadDispatcher.h  CMakeLists.txt  main.cpp
lab5/SearchServer/: CMakeLists.txt  Document.h  Indexer.cpp  Indexer.h  Searcher.cpp  Searcher.h  main.cpp
lab5/ThreadPool/: CMakeLists.txt  ThreadPool.h  main.cpp
lab5/ThreadsafeSet/: CMakeLists.txt  ThreadsafeSet.h  Time.h  main.cpp
lab6/: CMakeLists.txt
lab6/MemoryManager/: CMakeLists.txt  MemoryManager.h  main.cpp
lab7/: CMakeLists.txt
lab7/Acrypt/: CMakeLists.txt  main.cpp
lab7/FSMonitor/: CMakeLists.txt  FileSystemMonitor.h  InotifyFileDesc.h
lab7/FSMonitorLinux/: CMakeLists.txt  main.cpp
lab7/FSMonitorWindows/: CMakeLists.txt  FileSystemMonitor.h  HandleDesc.h  main.cpp
lab8/: CMakeLists.txt
lab8/Snowflakes/: CMakeLists.txt  SnowfallApp.h  X11Window.h  main.cpp
(+6 files in other folders)
